# weather-station

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
src/gui/: display.rs  gui.rs  mod.rs  views.rs  widgets.rs
src/model/: acurite5n1.rs  mod.rs  peripherals.rs  real_time_clock.rs  scheduler.rs  user_buttons.rs  weather_station.rs
